# make-comment-movie

./: .gitignore  Cargo.toml  README.md  SPECIFICATION.md
scripts/: make-comment-movie-from-mp4.sh
src/: ass.rs  comments.rs  ffmpeg.rs  ffprobe.rs  main.rs  video_start.rs
